--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,18 +4,19 @@ on:
   workflow_dispatch: # 手動で実行するためのトリガー
 
 jobs:
-  numpy-test:
+  job1:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.12'
-          architecture: 'x64'
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+
       - name: Create .venv
         run: uv sync
+
       - name: Activate .venv
         run: source .venv/bin/activate
+        
       - name: Run Python
         run: python main.py
