--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,5 @@ jobs:
       - name: Create .venv
         run: uv sync
 
-      - name: Activate .venv
-        run: source .venv/bin/activate
-        
       - name: Run Python
-        run: python main.py
+        run: uv run main.py
