--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch: # 手動で実行するためのトリガー
 
 jobs:
-  job1:
+  update-html:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,3 +17,11 @@ jobs:
 
       - name: Run Python
         run: uv run main.py
+      
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git commit -m "Update HTML files" || echo "No changes to commit"
+          git push
