--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,10 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install uv
+      - name: Install uv with Python 3.12
         uses: astral-sh/setup-uv@v4
+        with:
+          python-version: 3.12
 
       - name: Create .venv
         run: uv sync
