--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: weekly update
 
 on:
   schedule:
-    - cron: '0 0 * * 0' # 毎週日曜日の0時0分に実行
+    - cron: '0 21 * * 5' # 毎週金曜日の21:00に実行（日本時間だと+9時間で土曜の午前6:00）
   workflow_dispatch: # 手動で実行するためのトリガー
 
 jobs:
